git add --all && git commit -m "Task3"