@@ -13,8 +13,6 @@ import springfox.documentation.spi.service.contexts.SecurityContext;
 import springfox.documentation.spring.web.plugins.Docket;
 import springfox.documentation.swagger2.annotations.EnableSwagger2;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
@@ -33,14 +31,14 @@ public class SwaggerConfig {
     public Docket restApi() {
 
         return new Docket(DocumentationType.SWAGGER_2)
+                .apiInfo(apiInfo())//
+                .securityContexts(List.of(securityContext()))//
+                .securitySchemes(List.of(apiKey()))//
                 .select()//
                 .apis(RequestHandlerSelectors.any())//
-                .paths(Predicates.not(PathSelectors.regex("/error")))//
+                .paths(Predicates.not(PathSelectors.regex("/error")))
                 .build()//
-                .apiInfo(apiInfo())//
                 .useDefaultResponseMessages(false)//
-                .securitySchemes(Collections.singletonList(apiKey()))
-                .securityContexts(Collections.singletonList(securityContext()))
                 .tags(new Tag("developers", "Operations about developers"))//
                 .genericModelSubstitutes(Optional.class);
 
@@ -70,7 +68,7 @@ public class SwaggerConfig {
         AuthorizationScope authorizationScope = new AuthorizationScope("global", "accessEverything");
         AuthorizationScope[] authorizationScopes = new AuthorizationScope[1];
         authorizationScopes[0] = authorizationScope;
-        return Arrays.asList(new SecurityReference("Authorization", authorizationScopes));
+        return List.of(new SecurityReference("Authorization", authorizationScopes));
     }
 
 }
